--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,39 +1,33 @@
 * {
     font-family: 'Raleway', sans-serif;
-    margin: 0;
-    box-sizing: border-box;
-    border-radius: 15px;
     max-width: auto;
-    padding: 1.2rem 2rem 0 2rem;
+    padding: 0.5rem;
     background: rgb(203, 223, 203);
 }
 
 .container {
-    box-sizing: border-box;
-    box-shadow: 0 0 8px 5px rgba(16, 18, 19, 0.664);
+
     max-width: auto;
     text-align: left;
 
 }
 
 header h1 {
-	text-align: center;
+	text-align: left;
 	font-weight: 200;
 	color: rgba(0, 0, 0, .7);
-	margin: 0px 0px 0px 0px;
 }
 
 nav {
-	border-top: 1px solid var(- -white);
+
 	text-align: right;
 	padding: 2rem 2rem;
-	background: #333;
+
 }
 
 nav a {
 	padding: 0.5em 2em;
-	text-decoration: none;
-	color: rgb(12, 23, 234);	
+	text-decoration: none;	
 	
 }
 
@@ -47,6 +41,10 @@ footer {
 	padding-bottom:2rem;
 }
 
+@media only screen and (max-width: 960px) {
+  article{
+    width: 50%;
+  }
   @media screen and (max-width: 750px) {
 
     nav {
