--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,90 +1,82 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700');
-body, div, section, article, h2, header, footer{
-  box-sizing: border-box;
-  margin: 0px;
+* {
+  font-family: 'Raleway', sans-serif;
+  max-width: auto;
+  padding: 0;
+  margin: 0;
+  background-color: #ebf5fa;
 }
-body{
-  font-family: "Montserrat", Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  letter-spacing: 1.5px;
-  margin:0 auto;
-  max-width: 1337px;
+
+.container {
+  max-width: auto;
 }
-header{
-  margin-top:24px;
-  padding: 24px;
-  text-align:center;
-}
-header h1{
-  font-size: 36px;
-  font-weight: 200;
-  color: rgba(0,0,0,.7);
-  margin: 0px 0px 0px 0px;
-  }
-header h3{
-  font-size: 16px;
-  font-weight: 400;
-  color: rgba(0,0,0,.2);
-  margin: 16px 0px 0px 0px;
-}
-footer{
-  clear:both;
-  padding: 24px;
-}
-footer h4{
-  font-size: 12px;
-  color: rgba(0,0,0,.4);
-}
-section{
-  width:100%;  
-  padding: 12px;
-}
-article{
-  color: white;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
+
+nav {
   display: flex;
-  float: left;
-  width: 50%;
-  padding: 12px;
+  justify-content: space-between;
+  text-align: right;
+  background-image: linear-gradient(
+    to right,
+    #0f87c3,
+    #068bcd,
+    #49b9f2,
+    #49b9f2
+  );
 }
-div{
-  position:relative;
-  min-height: 280px;
-  width: 100%;
-  background-color: #A9C9FF;
-  background-image: linear-gradient(45deg, #A9C9FF 0%, #FFBBEC 100%);
-  border-radius: 15px;
-  padding: 24px;
-  box-shadow: 0 10px 20px rgba(169, 201, 255, .4);
-  transition: 0.3s ease-in-out;
+
+.logo {
+  display: flex;
+  text-align: left;
+  padding: 0.5em;
+  color: white;
+  background-image: linear-gradient(
+    to right,
+    #0f87c3,
+    #068bcd
+    );
 }
-div:hover{
-  transform: scale(1.02);
-  box-shadow: 0 15px 20px rgba(169, 201, 255, .6);
+
+nav a {
+  display: flex;
+  padding: 0.5em;
+  text-align: right;
+  text-decoration: none;
+  color: #04496b;
+  background-image: linear-gradient(
+    to right,
+      #49b9f2,
+      #49b9f2,
+     lightblue
+     );
 }
-h2{
-  font-size: 16px;
-  font-weight: 600;
-  text-transform: uppercase;
+
+nav a:visited {
+  color: #04496b;
 }
-@media only screen and (max-width: 960px) {
-  article{
-    width: 50%;
-  }
+
+nav a:hover {
+  opacity: 0.6;
 }
-@media only screen and (max-width: 680px) {
-  article{
-    width: 100%;
-    padding: 8px;
-  }
-  section{  
-  padding: 8px;
-  }
-  div:hover{
-  transform: scale(1);
-  box-shadow: 0 10px 20px rgba(169, 201, 255, .4);
-  }
+
+.dashboard {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding: 2em 2em;
+  height: 80%;
+}
+
+li {
+  list-style: none;
+}
+
+section {
+  display: flex;
+  flex-direction: column;
+  grid-gap: 5%;
+  padding: 2em 2em;
+}
+
+footer {
+  text-align: center;
+  color: black;
+  padding-top: 15%;
 }
