reigning my stuff in

--- a/src/main/resources/templates/my-medications.html
+++ b/src/main/resources/templates/my-medications.html
@@ -29,8 +29,8 @@
         </div>
       </section>
       <div class="log-medication">
-        <input type="hidden" th:value="${medication.id}" name="medId" />
-        <button th:formaction="@{log-medication}">Dose Taken</button>
+            <button>Dose Taken</button>
+
       </div>
     </div>
 
