--- a/src/main/resources/templates/nonMedicalUser-Home.html
+++ b/src/main/resources/templates/nonMedicalUser-Home.html
@@ -3,14 +3,14 @@
 
 <head>
 <title>Peace Of Mind</title>
-<link href="/css/styles.css" rel="stylesheet">
+<link href="/css/non-med-styles.css" rel="stylesheet">
 </head>
 
 <body class="container">
 
 	<header>
 		<nav>
-			<h2 class="logo">Peace of Mind</h2>
+			<img class="logo" src="images/logo.png" alt="logo">
 			<h2>
 				<a th:href="@{/non-medical-user(id=${nonMedicalUser.id})}">Account</a>
 
