--- a/src/main/resources/static/css/non-med-styles.css
+++ b/src/main/resources/static/css/non-med-styles.css
@@ -7,6 +7,7 @@
 }
 
 .container {
+	padding-bottom:2rem;
   max-width: auto;
   text-align: center;
 }
@@ -96,7 +97,7 @@ footer {
   font-size: 15px;
   margin-left: 10px;
 }
-#par-container {
+.par-container {
   padding: 5px;
 
   border-radius: 5px;
