--- a/src/main/resources/templates/medicalUser-Home.html
+++ b/src/main/resources/templates/medicalUser-Home.html
@@ -3,17 +3,19 @@
 
 <head>
   <title>Peace Of Mind</title>
+  <link href="/css/non-med-styles.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="container">
   <header>
-    <h1>Peace of Mind</h1>
-    <nav>
-      <h2>
-      <a th:href="@{/medical-user(id=${medicalUser.id})}">Account</a>
-    </h2>
-    </nav>
-  </header>
+      <nav>
+        <img class="logo" src="images/logo.png" alt="logo">
+        <h2>
+            <a th:href="@{/medical-user(id=${medicalUser.id})}">Account</a>
+  
+        </h2>
+      </nav>
+    </header>
 
     <h3>Your Dashboard</h3>
 
