--- a/src/main/resources/templates/medicalUser.html
+++ b/src/main/resources/templates/medicalUser.html
@@ -3,19 +3,19 @@
 
 <head>
   <title>Peace Of Mind</title>
+  <link href="/css/non-med-styles.css" rel="stylesheet">
 </head>
 
 <body class="container">
 
   <header>
-    <h1>Peace of Mind</h1>
-    <nav>
-      <h2>
+      <nav>
+        <img class="logo" src="images/logo.png" alt="logo">
+        <h2>
         <a th:href="@{/medical-user-home(id=${medicalUser.id})}">Home</a>
-      </h2>
-    </nav>
-  </header>
-
+        </h2>
+      </nav>
+    </header>
   <section class="account-info">
     <h4>Your Account Information</h4>
     <p>Your Username: <span th:text="${medicalUser.userName}"></span></p>
