--- a/src/main/resources/templates/patient-home.html
+++ b/src/main/resources/templates/patient-home.html
@@ -30,9 +30,9 @@
       <img class="emotionsIcon" src="images/emotions.png" alt="emotion-icon">
       <h2>How are you feeling?</h2>
       <div class="emotionalStatus">
-        <img class="emotionIndicator" src="images/happy.png" alt="happy-icon">
+        <img class="emotionIndicator" src="images/happiness.png" alt="happy-icon">
         <input type="radio" id="happy" name="currentStatus" value="happy" checked>
-        <img class="emotionIndicator" src="images/sad.png" alt="sad-icon">
+        <img class="emotionIndicator" src="images/tearful.png" alt="sad-icon">
         <input type="radio" id="sad" name="currentStatus" value="sad">
         <img class="emotionIndicator" src="images/angry.png" alt="angry-icon">
         <input type="radio" id="angry" name="currentStatus" value="angry">
