--- a/src/main/resources/templates/patient.html
+++ b/src/main/resources/templates/patient.html
@@ -9,7 +9,7 @@
 <body class="container">
 
   <nav>
-    <h2 class="logo">Peace Of Mind</h2>
+    <img class="logo" src="images/logo.png" alt="logo">
     <h2>
       <a th:href="@{/patient-home(id=${patient.id})}">Home</a>
     </h2>
@@ -33,7 +33,7 @@
     </div>
 
     <footer>
-      <span>&copy; 2018 Peace Of Mind WCCI Flex Fall Columbus Final project</span>
+      <small>&copy; 2018 Peace Of Mind WCCI Flex Fall Columbus Final project</small>
     </footer>
 
 </body>
