--- a/src/main/resources/templates/nonMedicalUser-Home.html
+++ b/src/main/resources/templates/nonMedicalUser-Home.html
@@ -33,9 +33,8 @@
 
 		<section class="patientStatus">
 			<h3>Current Patient Status</h3>
-			<p>
-				<em>placeholder!!!!</em>
-			</p>
+			<img th:src="@{'images/' + ${status.status.getImageFile()}}">
+			<p>Entered at [[${status.printDateTime()}]]</p>
 		</section>
 
 
