--- a/src/main/resources/templates/nonMedicalUser-Home.html
+++ b/src/main/resources/templates/nonMedicalUser-Home.html
@@ -31,7 +31,7 @@
 			</div>
 		</section>
 
-		<section class="patientStatus">
+		<section class="patientStatus" th:if="${status.id}">
 			<h3>Current Patient Status</h3>
 			<img th:src="@{'images/' + ${status.status.getImageFile()}}">
 			<p>Entered at [[${status.printDateTime()}]]</p>
