--- a/src/main/resources/templates/medicalUser-Home.html
+++ b/src/main/resources/templates/medicalUser-Home.html
@@ -51,6 +51,12 @@
           </div>
         </ul>
       </div>
+      <br/>
+      <form class="add-medication" method="GET">
+        <p>Would you like to add a new medication to this patient?</p>
+        <input type="hidden" name="id" value="${patient.id}">
+        <button class="btn" id="btn-add-med" type="submit" value="submit" th:formaction=@{/add-medication}>Yes</button>
+      </form>
     </section>
 
     <section class="patient-contactinfo">
