added more testing of js

--- a/src/main/resources/templates/patient-home.html
+++ b/src/main/resources/templates/patient-home.html
@@ -4,7 +4,7 @@
 <head>
   <title>A Patient</title>
   <link href="/css/patient-main-style.css" rel="stylesheet">
-  <script src="/js/patient-home.js"></script>
+  <script type="text/javascript" src="/js/patient-home.js"></script>
   <script>
 
       document.addEventListener('readystatechange',(evt) => {
