confirmed JS is copying the hidden information and inserting before with hover class

--- a/src/main/resources/templates/patient-home.html
+++ b/src/main/resources/templates/patient-home.html
@@ -11,7 +11,7 @@
         if(evt.target.readyState === 'complete'){
           const test = document.querySelector('.medUser');
           test.addEventListener(
-            'click' , hoverInnerDiv.bind(test, '.medUser'));
+            'click' , hoverInnerDiv.bind(test));
         }
       })
   </script>
