--- a/src/main/resources/templates/add-medication.html
+++ b/src/main/resources/templates/add-medication.html
@@ -10,7 +10,7 @@
     
     <header>
         <nav>
-          <img class="logo" src="images/logo.png" alt="logo">
+          <img class="logo" src="../../images/logo.png" alt="logo">
           <h2>
               <a th:href="@{/medical-user(id=${medicalUser.id})}">Account</a>
           </h2>
@@ -21,10 +21,54 @@
 
         <h3>Add a New Medication for [[${patient.firstName}]] [[${patient.lastName}]]</h3>
 
+        <input type="hidden" id="id" name="id" th:value="${patient.id}">
+        
+        <div class="drugname">
+            <label for="name">Drug Name</label>
+            <input class="textbox" type="text" id="name" name="genericName">
+        </div>
 
+        <div class="dosage">
+            <label for="dosage">Dosage</label>
+            <input class="textbox" type="text" id="dosage" name="dosage">    
+        </div>
 
+        <div class="administration">
+            <label for="administration">Administration</label>
+            <input class="textbox" type="text" id="administration" name="administration">
+        </div>
 
+        <div class="amount">
+            <label for="amount">Frequency Amount</label>
+            <input class="textbox" type="text" id="amount" name="frequencyAmount">
+        </div>
 
+        <div class="time">
+            <p>How frequently should the patient take the medication?</p>
+            <label for="daily">Daily</label>
+            <input class="time" type="radio" id="daily" name="frequencyTime" value="daily" checked>
+            <label for="weekly">Weekly</label>
+            <input class="time" type="radio" id="weely" name="frequencyTime" value="weekly">
+            <label for="monthly">Monthly</label>
+            <input class="time" type="radio" id="monthly" name="frequencyTime" value="monthly">
+            <label for="needed">As Needed</label>
+            <input class="time" type="radio" id="needed" name="frequencyTime" value="needed">
+        </div>
+
+        <div class="picture">
+            <input class="picture" type="hidden" id="picture" name="picture" value="">
+        </div>
+
+        <div class="reason">
+            <label for="reason">Why does the patient take the drug?</label>
+            <input class="textbox" type="text" id="reason" name="reason">
+        </div>
+
+        <button class="submit-btn btn">Submit</button>
+
+        <div class="new-medication">
+            
+        </div>
 
     </div>
 </body>
