Submission works with JS - prevents bad information - linking table issue

--- a/src/main/resources/templates/add-medication.html
+++ b/src/main/resources/templates/add-medication.html
@@ -56,7 +56,7 @@
         </div>
 
         <div class="picture">
-            <input class="picture" type="hidden" id="picture" name="picture" value="">
+            <input class="picture" type="hidden" id="picture" name="picture" value="na">
         </div>
 
         <div class="reason">
@@ -67,9 +67,10 @@
         <button class="submit-btn btn">Submit</button>
 
         <div class="new-medication">
-            
+
         </div>
 
     </div>
+    <script src="../../js/add-meds.js"></script>
 </body>
 </html>
