--- a/src/main/resources/templates/add-medication.html
+++ b/src/main/resources/templates/add-medication.html
@@ -12,7 +12,7 @@
         <nav>
           <img class="logo" src="../../images/logo.png" alt="logo">
           <h2>
-              <a th:href="@{/medical-user(id=${medicalUser.id})}">Account</a>
+              <a th:href="@{/medical-user-home(id=${medicalUser.id})}">Home</a>
           </h2>
         </nav>
     </header>
