--- a/src/main/resources/templates/med-tracker-history-med.html
+++ b/src/main/resources/templates/med-tracker-history-med.html
@@ -12,13 +12,13 @@
 		<nav>
 			<img class="logo" src="images/logo.png" alt="logo">
 			<h2>
-				<a th:href="@{/non-medical-user-home(id=${nonMedicalUser.id})}">Home</a>
+				<a th:href="@{/medical-user-home(id=${medicalUser.id})}">Home</a>
 
 			</h2>
 		</nav>
 	</header>
 
-	<div class="dashboard" th:if="${nonMedicalUser.patient}" th:each="patient : ${nonMedicalUser.patient}">
+	<div class="dashboard" th:if="${medicalUser.patient}" th:each="patient : ${medicalUser.patient}">
 
 
 		<section class="medTracker" th:if="${medicationTrackers}">
