--- a/src/main/resources/templates/medicalUser-Home.html
+++ b/src/main/resources/templates/medicalUser-Home.html
@@ -12,7 +12,7 @@
         <img class="logo" src="images/logo.png" alt="logo">
         <h2>
             <a th:href="@{/medical-user(id=${medicalUser.id})}">Account</a>
-  
+
         </h2>
       </nav>
     </header>
@@ -26,11 +26,17 @@
     <p>Diagnosis: <span th:text="${patient.diagnosis}"></span></p>
 
     <section class="medLog">
-      <h3>Med Log</h3>
-      <div>
-        <p> <em>place holder for medlog display</em> </p>
-      </div>
+      <h3>Medication Adherence</h3>
+      <p>This Month</p>
+      <section class="medAdherenceDash" th:if="${medications}">
+        <div class="medStatus" th:each="medication : ${medications}">
+            <img th:src=${medication.adherentThisMonth}>
+            <h4><p id="medName" th:text=${medication.genericName}></p></h4>
+        </div>
+      </section>
+              <a th:href="@{/med-tracker-history-med(id=${patient.id})}">Full Adherence History</a>
     </section>
+
 
     <section class="patientStatus" th:if="${status.id}">
       <h3>Current Patient Status</h3>
