--- a/src/main/resources/templates/add-medication.html
+++ b/src/main/resources/templates/add-medication.html
@@ -4,6 +4,7 @@
 <head>
   <title>Peace Of Mind</title>
   <link href="/css/non-med-styles.css" rel="stylesheet">
+  <link href="/css/addmeds.css" rel="stylesheet">
 </head>
 
 <body class="container">
@@ -23,25 +24,35 @@
 
         <input type="hidden" id="id" name="id" th:value="${patient.id}">
         
-        <div class="drugname">
-            <label for="name">Drug Name</label>
-            <input class="textbox" type="text" id="name" name="genericName">
+        <div class="text">
+            <div class="drugname">
+                <label for="name">Drug Name</label>
+                <input class="textbox" type="text" id="name" name="genericName">
+            </div>
         </div>
 
-        <div class="dosage">
-            <label for="dosage">Dosage</label>
-            <input class="textbox" type="text" id="dosage" name="dosage">    
+        <div class="text">
+            <div class="dosage">
+                <label for="dosage">Dosage</label>
+                <input class="textbox" type="text" id="dosage" name="dosage">    
+            </div>
         </div>
 
-        <div class="administration">
-            <label for="administration">Administration</label>
-            <input class="textbox" type="text" id="administration" name="administration">
+        <div class="text">
+            <div class="administration">
+                <label for="administration">Administration</label>
+                <input class="textbox" type="text" id="administration" name="administration">
+            </div>
         </div>
 
-        <div class="amount">
-            <label for="amount">Frequency Amount</label>
-            <input class="textbox" type="text" id="amount" name="frequencyAmount">
+
+        <div class="text">
+            <div class="amount">
+                <label for="amount">Frequency Amount</label>
+                <input class="textbox" type="text" id="amount" name="frequencyAmount">
+            </div>
         </div>
+
 
         <div class="time">
             <p>How frequently should the patient take the medication?</p>
@@ -55,16 +66,17 @@
             <input class="time" type="radio" id="needed" name="frequencyTime" value="needed">
         </div>
 
-        <div class="picture">
-            <input class="picture" type="hidden" id="picture" name="picture" value="na">
-        </div>
-
+        
         <div class="reason">
             <label for="reason">Why does the patient take the drug?</label>
             <input class="textbox" type="text" id="reason" name="reason">
         </div>
-
+        
         <button class="submit-btn btn">Submit</button>
+        
+        <div class="picture">
+            <input class="picture" type="hidden" id="picture" name="picture" value="na">
+        </div>
 
         <div class="new-medication">
 
