page functional... separate pages for Non-Med and med version?

--- a/src/main/resources/templates/nonMedicalUser-Home.html
+++ b/src/main/resources/templates/nonMedicalUser-Home.html
@@ -37,6 +37,11 @@
 			<h3>Current Patient Status</h3>
 			<img th:src="@{'images/' + ${status.status.getImageFile()}}">
 			<p>Entered at [[${status.printDateTime()}]]</p>
+			<form method="GET">
+				<p>Would you like to view the status history?</p>
+				<input type="hidden" name="id" th:value="${patient.id}">
+				<button type="submit" value="submit" formaction="/status-history">View Status History</button>
+			</form>
 		</section>
 
 
